--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -148,9 +148,9 @@
   },
   "logs_type": {
     "NEW": "Ariza yaratdi",
-    "IN_PROCESS": "Arizani jarayonga o'tkazdi",
-    "IN_AGREEMENT": "Arizani kelishishga o'tkazdi",
-    "IN_APPROVAL": "Arizani tasdiqlashga o'tkazdi",
+    "IN_PROCESS": "Arizani jarayonga o‘tkazdi",
+    "IN_AGREEMENT": "Arizani kelishishga o‘tkazdi",
+    "IN_APPROVAL": "Arizani tasdiqlashga o‘tkazdi",
     "COMPLETED": " Arizani yakunladi",
     "CANCELED": " Arizani qaytardi",
     "REJECTED": " Arizani rad etdi"
@@ -734,103 +734,13 @@
       "address": "Joylashgan manzil",
       "passportPath": "INM (qurilma) pasporti va sertifikati fayli",
       "additionalFilePath": "Qo‘shimcha ma‘lumotlar"
-    },
-    "ACCREDIT_EXPERT_ORGANIZATION": {
-      "accreditationSpheres": "Akkreditatsiya sohalari",
-      "responsiblePersonName": "Masʼul vakil F.I.Sh",
-      "accreditationFieldPath": "Faoliyat olib boriladigan akkreditatsiya sohasi",
-      "organizationCharterPath": "Ekspert tashkiloti nizomi",
-      "declarationConformityPath": "Akkreditatsiya mezonlariga muvofiqlik deklaratsiyasi",
-      "receiptPath": "To'lov to'langanligini tasdiqlovchi hujjat",
-      "employeesInfoPath": "Ishlarni bajaradigan hodimlar haqida ma'lumotlar",
-      "accreditationResourcedPath": "Ishlarni bajarish uchun mavjud resurslar haqida ma'lumotlar",
-      "propertyOwnerShipPath": "Bino, jihozlarga mulk huquqini tasdiqlovchi hujjatlar",
-      "qualityPerformanceInstructionPath": "Sifat bo'yicha qo'llanma",
-      "qualityManagementSystemPath": "Sifatni boshqarish tizimi hujjatlari"
-    },
-    "RE_ACCREDIT_EXPERT_ORGANIZATION": {
-      "accreditationSpheres": "Akkreditatsiya sohasi",
-      "certificateDate": "ЭТ attestat berilgan sana",
-      "certificateValidityDate": "Akkreditatsiya attestatining amal qilish muddati",
-      "certificateNumber": "Akkreditatsiya attestatining ro‘yxat raqami",
-      "responsiblePersonName": "Masʼul vakil F.IS.H.",
-      "accreditationFieldPath": "Buyurtmachi faoliyat olib bormoqchi bo‘lgan akkreditatsiya sohasi",
-      "organizationCharterPath": "Buyurtmachi tomonidan akkreditatsiya qilish uchun to‘lov to‘langanligini tasdiqlovchi hujjat",
-      "declarationConformityPath": "Mavjud bino va inshootlar, jihozlar, asbob-uskunalar buyurtmachiga mulk huquqi yoki boshqa qonuniy asosda taalluqliligini tasdiqlovchi hujjatlarning nusxalari",
-      "receiptPath": "Ekspert tashkiloti nizomi",
-      "employeesInfoPath": "Akkreditasiya sohasidagi ishlarni bajaradigan hodimlar to‘g‘risidagi maʼlumotlar",
-      "propertyOwnerShipPath": "Buyurtmachining sifat bo‘yicha va faoliyati bo‘yicha qo‘llanmasi",
-      "qualityPerformanceInstructionPath": "Buyurtmachining akkreditatsiya mezonlariga muvofiqligini tasdiqlovchi deklaratsiya",
-      "accreditationResourcedPath": "Akkreditasiya sohasidagi ishlarni bajarish uchun mavjud sharoitlar, jihozlar, dasturlar va asbob-uskunalar xaqidagi ma'lumotlar",
-      "qualityManagementSystemPath": "Buyurtmachining sifatni boshqarish tizimi xujjatlari"
-    },
-    "EXPEND_ACCREDITATION_SCOPE": {
-      "accreditationSpheres": "Akkreditatsiya sohasi",
-      "certificateDate": "ЭТ attestat berilgan sana",
-      "certificateValidityDate": "Akkreditatsiya attestatining amal qilish muddati",
-      "certificateNumber": "Akkreditatsiya attestatining ro‘yxat raqami",
-      "responsiblePersonName": "Masʼul vakil F.IS.H.",
-      "accreditationFieldPath": "Buyurtmachi faoliyat olib bormoqchi bo‘lgan akkreditatsiya sohasi",
-      "organizationCharterPath": "Buyurtmachi tomonidan akkreditatsiya qilish uchun to‘lov to‘langanligini tasdiqlovchi hujjat",
-      "declarationConformityPath": "Mavjud bino va inshootlar, jihozlar, asbob-uskunalar buyurtmachiga mulk huquqi yoki boshqa qonuniy asosda taalluqliligini tasdiqlovchi hujjatlarning nusxalari",
-      "receiptPath": "Ekspert tashkiloti nizomi",
-      "employeesInfoPath": "Akkreditasiya sohasidagi ishlarni bajaradigan hodimlar to‘g‘risidagi maʼlumotlar",
-      "propertyOwnerShipPath": "Buyurtmachining sifat bo‘yicha va faoliyati bo‘yicha qo‘llanmasi",
-      "qualityPerformanceInstructionPath": "Buyurtmachining akkreditatsiya mezonlariga muvofiqligini tasdiqlovchi deklaratsiya",
-      "accreditationResourcedPath": "Akkreditasiya sohasidagi ishlarni bajarish uchun mavjud sharoitlar, jihozlar, dasturlar va asbob-uskunalar xaqidagi ma'lumotlar",
-      "qualityManagementSystemPath": "Buyurtmachining sifatni boshqarish tizimi xujjatlari"
-    },
-    "EXPERTISE_CONCLUSION": {
-      "phoneNumber": "Tashkilot telefon raqami",
-      "customerTin": "Tashkilot STIR",
-      "customerLegalName": "Tashkilot nomi",
-      "customerLegalForm": "Tashkilot tashkiliy-huquqiy shakli",
-      "customerLegalAddress": "Tashkilot yuridik manzili",
-      "customerPhoneNumber": "Tashkilot telefon raqami (kodi bilan)",
-      "customerFullName": "Tashkilot rahbarining F.I.Sh",
-      "regionId": "Obyekt joylashgan viloyat",
-      "districtId": "Obyekt joylashgan tuman",
-      "address": "Obyekt joylashgan manzili",
-      "monitoringLetterDate": "Kuzatuv xati sanasi",
-      "monitoringLetterNumber": "Kuzatuv xati raqami",
-      "submissionDate": "Ekspertiza sanasi",
-      "objectName": "Ekspertiza ob’ekti nomi",
-      "firstSymbolsGroup": "Birinchi belgilar guruhi",
-      "secondSymbolsGroup": "Ikkinchi belgilar guruhi",
-      "thirdSymbolsGroup": "Uchinchi belgilar guruhi",
-      "expertiseConclusionNumber": "Eksperiza xulosasi raqami",
-      "expertiseConclusionPath": "Eksperiza xulosasi"
-    },
-    "REGISTER_ATTESTATION": {
-      "hfId": "XICHOni tanlang",
-      "hfRegistryNumber": "XICHOning hisobga olish raqami",
-      "upperOrganizationName": "Yuqori turuvchi tashkilotning nomi",
-      "legalName": "XICHОdan foydalanuvchi tashkilotning nomi",
-      "legalTin": "STIR",
-      "hfName": "XICHOning nomi",
-      "address": "XICHO manzili",
-      "regionId": "XICHO viloyati",
-      "districtId": "XICHO tumani",
-      "direction": "Attestatsiyadan o‘tuvchilar tarkibi",
-      "phoneNumber": "Telefon raqam",
-      "dateOfAttestation": "Texnik va oddiy xodimlar attestatsiyadan o'tkazish sanasi",
-      "employeeList.pin": "JSHSHIR",
-      "employeeList.fullName": "Attestatsiyadan o'tkaziladigan xodim FIO",
-      "employeeList.profession": "Xodim lavozimi",
-      "employeeList.level": "Xodim lavozim turi",
-      "employeeList.ctcTrainingFromDate": "“Kontexnazorato‘quv” DMda o‘qigan muddati (dan)",
-      "employeeList.ctcTrainingToDate": "“Kontexnazorato‘quv” DMda o‘qigan muddati (gacha)",
-      "employeeList.certNumber": "Sertifikat raqami",
-      "employeeList.certDate": "Sertifikat sanasi",
-      "employeeList.certExpiryDate": "Sertifikat muddati",
-      "employeeList.dateOfEmployment": "Ishga kirgan sanasi"
     }
   },
   "user-logs": {
     "NEW": "Ariza yaratdi",
-    "IN_PROCESS": "Arizani jarayonga o'tkazdi",
-    "IN_AGREEMENT": "Arizani kelishishga o'tkazdi",
-    "IN_APPROVAL": "Arizani tasdiqlashga o'tkazdi",
+    "IN_PROCESS": "Arizani jarayonga o‘tkazdi",
+    "IN_AGREEMENT": "Arizani kelishishga o‘tkazdi",
+    "IN_APPROVAL": "Arizani tasdiqlashga o‘tkazdi",
     "COMPLETED": "Arizani yakunladi",
     "CANCELED": "Arizani qaytardi",
     "REJECTED": " Arizani rad etdi"
