--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -188,7 +188,7 @@
   "number": "Raqami",
   "soato": "MHOBT",
   "loading": "Yuklanmoqda...",
-  "sequence_number": "T/r",
+  "sequence_number": "T/R",
   "previous": "Oldingi",
   "next": "Keyingi",
   "showing_items": "{{start}} - {{end}} / Umumiy {{total}} ta maʼlumot",
