--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -346,7 +346,7 @@
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "partialCheckDate": "Qisman texnik koʼrikdan oʼtkazilgan sana",
-      "fullCheckDate": "Toʼliq texnik koʼrikdan oʼtkazilgan sana",
+      "fullCheckDate": "Texnik koʼrikdan oʼtkazilgan sana",
       "liftingCapacity": "Yuk koʻtara olish quvvati",
       "stopCount": "Toʼxtashlar soni",
       "sphere": "Soha",
@@ -421,7 +421,7 @@
       "factory": "Idishni ishlab chiqargan zavod nomi",
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "Tashqi va ichki ko‘rik o‘tkazilgan sana",
+      "partialCheckDate": "Ichki ko‘rik o‘tkazilgan sana",
       "fullCheckDate": "Gidravlik sinov o‘tkazilgan sana",
       "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
@@ -439,8 +439,8 @@
       "equipmentCertPath": "Bosim ostida ishlovchi idish muvofiqlik sertifikati (havo sig'imlaridan uchun majburiy emas)",
       "installationCertPath": "Montaj dalolatnomasi",
       "passportPath": "Bosim ostida ishlovchi idish pasporti",
-      "partialCheckPath": "Idishning tashqi va ichki ko‘rikdan o‘tkazilganligi",
-      "nextPartialCheckDate": "Navbatdagi tashqi va ichki ko‘rik sanasi",
+      "partialCheckPath": "Idishning ichki ko'rikdan o'tkazilganligi",
+      "nextPartialCheckDate": "Navbatdagi ichki ko‘rik sanasi",
       "fullCheckPath": "Idishning gidravlik sinovdan o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
       "type": "Qurilma turi",
@@ -462,7 +462,7 @@
       "factory": "Qozonni ishlab chiqargan zavod nomi",
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "Tashqi va ichki ko‘rik o‘tkazilgan sana",
+      "partialCheckDate": "Ichki ko‘rik o‘tkazilgan sana",
       "fullCheckDate": "Gidravlik sinov o‘tkazilgan sana",
       "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
@@ -480,8 +480,8 @@
       "equipmentCertPath": "Qozonning muvofiqlik sertifikati (muqaddam foydalanishda bo'lgan bug'qozon uchun majburiy emas)",
       "installationCertPath": "Montaj dalolatnomasi",
       "passportPath": "Qozonning pasporti",
-      "partialCheckPath": "Qozonning tashqi va ichki ko‘rikdan o‘tkazilganligi",
-      "nextPartialCheckDate": "Navbatdagi tashqi va ichki ko‘rik sanasi",
+      "partialCheckPath": "Qozonning ichki ko'rikdan o'tkazilganligi",
+      "nextPartialCheckDate": "Navbatdagi ichki ko‘rik sanasi",
       "fullCheckPath": "Qozonning gidravlik sinovdan o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
       "type": "Qurilma turi",
@@ -504,7 +504,7 @@
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "partialCheckDate": "Qisman texnik ko‘rikdan o‘tkazilgan sana",
-      "fullCheckDate": "To‘liq texnik ko‘rikdan o‘tkazilgan sana",
+      "fullCheckDate": "Texnik ko‘rikdan o‘tkazilgan sana",
       "passengersPerMinute": "O‘tkazish qobiliyati, kishi/soat",
       "length": "Uzunligi",
       "speed": "Tezligi",
@@ -542,8 +542,8 @@
       "factory": "Quvurni ishlab chiqargan zavod nomi",
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "Qisman texnik ko‘rikdan o‘tkazilgan sana",
-      "fullCheckDate": "To‘liq texnik ko‘rikdan o‘tkazilgan sana",
+      "partialCheckDate": "Quvurning tashqi ko‘rikdan o‘tkazilgan sana",
+      "fullCheckDate": "Quvurning gidravlik sinovdan o‘tkazilgan sana",
       "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "diameter": "Diametr, mm",
       "thickness": "Devor qalinligi,mm",
@@ -586,7 +586,7 @@
       "factory": "Idishni ishlab chiqargan zavod nomi",
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "Tashqi va ichki ko‘rik o‘tkazilgan sana",
+      "partialCheckDate": "Ichki ko‘rik o‘tkazilgan sana",
       "fullCheckDate": "Gidravlik sinov o‘tkazilgan sana",
       "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
@@ -604,8 +604,8 @@
       "equipmentCertPath": "Bosim ostida ishlovchi idish muvofiqlik sertifikati (havo sig'imlaridan uchun majburiy emas)",
       "installationCertPath": "Montaj dalolatnomasi",
       "passportPath": "Bosim ostida ishlovchi idish pasporti",
-      "partialCheckPath": "Idishning tashqi va ichki ko‘rikdan o‘tkazilganligi",
-      "nextPartialCheckDate": "Navbatdagi tashqi va ichki ko‘rik sanasi",
+      "partialCheckPath": "Idishning ichki ko'rikdan o'tkazilganligi",
+      "nextPartialCheckDate": "Navbatdagi ichki ko‘rik sanasi",
       "fullCheckPath": "Idishning gidravlik sinovdan o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
       "type": "Qurilma turi",
@@ -627,8 +627,8 @@
       "factory": "Quvur egasining nomi",
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "Qisman texnik ko‘rikdan o‘tkazilgan sana",
-      "fullCheckDate": "To‘liq texnik ko‘rikdan o‘tkazilgan sana",
+      "partialCheckDate": "Quvurning tashqi ko‘rikdan o‘tkazilgan sana",
+      "fullCheckDate": "Quvurning gidravlik sinovdan o‘tkazilgan sana",
       "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "diameter": "Diametr, mm",
       "thickness": "Devor qalinligi,mm",
@@ -670,7 +670,7 @@
       "factory": "Qozon utilizatori egasining nomi",
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "Tashqi va ichki ko‘rik o‘tkazilgan sana",
+      "partialCheckDate": "Tashqi ko‘rik o‘tkazilgan sana",
       "fullCheckDate": "Gidravlik sinov o‘tkazilgan sana",
       "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
@@ -692,8 +692,8 @@
       "passportPath": "Qozonning pasporti",
       "fullCheckPath": "Qozonning gidravlik sinov o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
-      "partialCheckPath": "Qozonning ichki ko‘rikdan o‘tkazilganligi",
-      "nextPartialCheckDate": "Navbatdagi tashqi va ichki ko‘rik sanasi",
+      "partialCheckPath": "Quvurning tashqi ko'rikdan o'tkazilganligi",
+      "nextPartialCheckDate": "Navbatdagi tashqi ko‘rik sanasi",
       "type": "Qurilma turi",
       "registryNumber": "Qurilmaning roʻyxatga olish raqami",
       "description": "Qurilmani roʻyxatdan chiqarish sababi",
@@ -713,7 +713,7 @@
       "factory": "Idishning (SUG) egasining nomi",
       "model": "Model, marka",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "Tashqi va ichki ko‘rik o‘tkazilgan sana",
+      "partialCheckDate": "Ichki ko‘rik o‘tkazilgan sana",
       "fullCheckDate": "Gidravlik sinov o‘tkazilgan sana",
       "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
@@ -733,8 +733,8 @@
       "passportPath": "Bosim ostida ishlovchi idish pasporti",
       "fullCheckPath": "Idishning gidravlik sinovdan o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
-      "partialCheckPath": "Idishning tashqi va ichki ko‘rikdan o‘tkazilganligi",
-      "nextPartialCheckDate": "Navbatdagi tashqi va ichki ko‘rik sanasi",
+      "partialCheckPath": "Idishning ichki ko‘rikdan o‘tkazilganligi",
+      "nextPartialCheckDate": "Navbatdagi ichki ko‘rik sanasi",
       "type": "Qurilma turi",
       "registryNumber": "Qurilmaning roʻyxatga olish raqami",
       "description": "Qurilmani roʻyxatdan chiqarish sababi",
