feat: some fixes and improvements

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -443,7 +443,7 @@
       "equipmentCertPath": "Bosim ostida ishlovchi idish muvofiqlik sertifikati (havo sig'imlaridan uchun majburiy emas)",
       "installationCertPath": "Montaj dalolatnomasi",
       "passportPath": "Bosim ostida ishlovchi idish pasporti",
-      "partialCheckPath": "Idishning ichki ko'rikdan o'tkazilganligi",
+      "partialCheckPath": "Idishning ichki ko‘rikdan o‘tkazilganligi",
       "nextPartialCheckDate": "Navbatdagi ichki ko‘rik sanasi",
       "fullCheckPath": "Idishning gidravlik sinovdan o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
@@ -495,12 +495,12 @@
       "labelPath": "Qozonning birkasi bilan sur‘ati",
       "assignmentDecreePath": "Mas‘ul shaxs tayinlanganligi to‘g‘risida buyruq",
       "saleContractPath": "Odli-sotdi shartnomasi (egalik huquqini beruvchi hujjat)",
-      "expertisePath": "Ekspertiza xulosasi (ishlash muddatini o'tagan bo'lsa majburiy)",
+      "expertisePath": "Ekspertiza xulosasi (ishlash muddatini o‘tagan bo‘lsa majburiy)",
       "expertiseExpiryDate": "Amal qilish sanasi",
-      "equipmentCertPath": "Qozonning muvofiqlik sertifikati (muqaddam foydalanishda bo'lgan bug'qozon uchun majburiy emas)",
+      "equipmentCertPath": "Qozonning muvofiqlik sertifikati (muqaddam foydalanishda bo‘lgan bug'qozon uchun majburiy emas)",
       "installationCertPath": "Montaj dalolatnomasi",
       "passportPath": "Qozonning pasporti",
-      "partialCheckPath": "Qozonning ichki ko'rikdan o'tkazilganligi",
+      "partialCheckPath": "Qozonning ichki ko‘rikdan o‘tkazilganligi",
       "nextPartialCheckDate": "Navbatdagi ichki ko‘rik sanasi",
       "fullCheckPath": "Qozonning gidravlik sinovdan o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
@@ -579,7 +579,7 @@
       "equipmentCertPath": "Quvur sertifikati fayli",
       "equipmentCertExpiryDate": "Amal qilish muddati",
       "assignmentDecreePath": "Mas‘ul shaxs tayinlanganligi to‘g‘risida buyruq",
-      "expertisePath": "Ekspertiza xulosasi (ishlash muddatini o'tagan bo'lsa majburiy)",
+      "expertisePath": "Ekspertiza xulosasi (ishlash muddatini o‘tagan bo‘lsa majburiy)",
       "expertiseExpiryDate": "Amal qilish muddati",
       "installationCertPath": "Montaj dalolatnomasi",
       "passportPath": "Quvur pasporti",
@@ -624,7 +624,7 @@
       "equipmentCertPath": "Bosim ostida ishlovchi idish muvofiqlik sertifikati (havo sig'imlaridan uchun majburiy emas)",
       "installationCertPath": "Montaj dalolatnomasi",
       "passportPath": "Bosim ostida ishlovchi idish pasporti",
-      "partialCheckPath": "Idishning ichki ko'rikdan o'tkazilganligi",
+      "partialCheckPath": "Idishning ichki ko‘rikdan o‘tkazilganligi",
       "nextPartialCheckDate": "Navbatdagi ichki ko‘rik sanasi",
       "fullCheckPath": "Idishning gidravlik sinovdan o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
@@ -663,7 +663,7 @@
       "saleContractPath": "Odli-sotdi shartnomasi (egalik huquqini beruvchi hujjat)",
       "equipmentCertPath": "Quvur muvofiqlik sertifikati (muqaddam foydalanishda bo‘lgan bug‘qozon uchun majburiy emas)",
       "assignmentDecreePath": "Mas‘ul shaxs tayinlanganligi to‘g‘risida buyruq",
-      "expertisePath": "Ekspertiza xulosasi (ishlash muddatini o'tagan bo'lsa majburiy)",
+      "expertisePath": "Ekspertiza xulosasi (ishlash muddatini o‘tagan bo‘lsa majburiy)",
       "expertiseExpiryDate": "Amal qilish muddati",
       "installationCertPath": "Montaj dalolatnomasi",
       "passportPath": "Quvur pasporti",
@@ -712,7 +712,7 @@
       "passportPath": "Qozonning pasporti",
       "fullCheckPath": "Qozonning gidravlik sinov o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi gidravlik sinov sanasi",
-      "partialCheckPath": "Quvurning tashqi ko'rikdan o'tkazilganligi",
+      "partialCheckPath": "Quvurning tashqi ko‘rikdan o‘tkazilganligi",
       "nextPartialCheckDate": "Navbatdagi tashqi ko‘rik sanasi",
       "type": "Qurilma turi",
       "registryNumber": "Qurilmaning roʻyxatga olish raqami",
@@ -866,7 +866,7 @@
       "saleContractPath": "Odli-sotdi shartnomasi (egalik huquqini beruvchi hujjat)",
       "expertisePath": "Ekspertiza xulosasi",
       "expertiseExpiryDate": "Amal qilish muddati",
-      "equipmentCertPath": "Osma yo‘lning muvofiqlik sertifikati (muqaddam foydalanishda bo'lgan osma arqonli yuruvchi yo'l uchun majburiy emas)",
+      "equipmentCertPath": "Osma yo‘lning muvofiqlik sertifikati (muqaddam foydalanishda bo‘lgan osma arqonli yuruvchi yo‘l uchun majburiy emas)",
       "installationCertPath": "Montaj dalolatnomasi",
       "fullCheckPath": "Texnik ko‘rikdan o‘tkazilganligi",
       "nextFullCheckDate": "Navbatdagi texnik ko‘rik sanasi",
