feat: add accident

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -109,6 +109,7 @@
     "ACCREDITATION": "Ekspert tashkilotlar",
     "CADASTRE": "Kadastr",
     "PERMITS": "Ruxsat etuvchi hujjatlar",
+    "ACCIDENT": "Baxtsiz hodisalar",
     "REPORT": "Hisobotlar",
     "INQUIRY": "Murojaatlar",
     "DECLARATION": "Deklaratsiya",
