feat: add accident

--- a/src/app/i18-next/translations/uz/accreditation.json
+++ b/src/app/i18-next/translations/uz/accreditation.json
@@ -17,8 +17,8 @@
     "organizationCharterPath": "Ekspert tashkiloti nizomi",
     "declarationConformityPath": "Akkreditatsiya mezonlariga muvofiqlik deklaratsiyasi",
     "receiptPath": "To‘lov to‘langanligini tasdiqlovchi hujjat",
-    "employeesInfoPath": "Ishlarni bajaradigan hodimlar haqida ma'lumotlar",
-    "accreditationResourcedPath": "Ishlarni bajarish uchun mavjud resurslar haqida ma'lumotlar",
+    "employeesInfoPath": "Ishlarni bajaradigan hodimlar haqida maʼlumotlar",
+    "accreditationResourcedPath": "Ishlarni bajarish uchun mavjud resurslar haqida maʼlumotlar",
     "propertyOwnerShipPath": "Bino, jihozlarga mulk huquqini tasdiqlovchi hujjatlar",
     "qualityPerformanceInstructionPath": "Sifat bo‘yicha qo‘llanma",
     "qualityManagementSystemPath": "Sifatni boshqarish tizimi hujjatlari"
