feat: add legal update

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -464,6 +464,7 @@
       "location": "Joylashuv (xaritadan joyni tanlang)",
       "labelPath": "Idishning birkasi bilan sur‘ati",
       "childEquipmentId": "Idish turi",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
       "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
       "registryNumber": "Qurilmaning roʻyxatga olish raqami",
